Fix spacing between subsections

--- a/frontend/src/sass/_common.scss
+++ b/frontend/src/sass/_common.scss
@@ -376,6 +376,7 @@ $footer-height: 48px;
 $info-content-max-width: 800px;
 $main-content-max-width: 1500px;
 $main-content-padding: $spacing-xl;
+$main-content-gap: 24px;
 $sidenav-header-height: 40px;
 $sidenav-padding: $spacing-large;
 $sidenav-width: 300px;
